--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1659.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
@@ -18,6 +19,7 @@
     "express-session": "^1.18.0",
     "graphql": "^15.3.0",
     "graphql-http": "^1.22.1",
+    "graphql-upload": "^16.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
