--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "ruru": "^2.0.0-beta.13"
+    "ruru": "^2.0.0-beta.13",
+    "stream-buffers": "^3.0.3",
+    "uuid": "^10.0.0"
   }
 }
