--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-graphql": "^0.12.0",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "express-slow-down": "^2.0.3",
     "graphql": "^15.3.0",
     "graphql-http": "^1.22.1",
     "graphql-upload": "^11.0.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4",
@@ -27,6 +30,7 @@
     "passport-local": "^1.0.0",
     "ruru": "^2.0.0-beta.13",
     "stream-buffers": "^3.0.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xss-clean": "^0.1.4"
   }
 }
